name:                spotify
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable spotify
  hs-source-dirs:      src/
  main-is:             spotify.hs
  other-modules:       Util Mixer McScraper Core NprScraper RPScraper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -fllvm
  extensions:          OverloadedStrings
  build-depends:       base
                     , hoauth2
                     , classy-prelude
                     , http-conduit
                     , bytestring
                     , aeson
                     , resourcet
                     , time
                     , hs-config
                     , transformers
                     , transient
                     , random
                     , conduit
                     , conduit-extra
                     , conduit-combinators
                     , monad-loops
                     , array
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , random-source
                     , random-fu
                     , random-extras
                     , esqueleto
                     , transformers-base
                     , monad-control
                     , hxt
                     , hxt-http
                     , split
                     , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/limaner2002/MyMixer
