name:                spotify
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/MyMixer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
  exposed-modules:     Spotify
                       MixerProcess
                       Server
                       Opts
  other-modules:       Core
                     , Util
                     , WeightedMap
                     , MCScraper
                     , WeightedShuffle
                     , Concurrent.Streaming
                     , OAuth
  build-depends:       base
                     , classy-prelude
                     , aeson
                     , resourcet
                     , transformers-base
                     , monad-control
                     , persistent-template
                     , persistent
                     , persistent-sqlite
                     , esqueleto
                     , random-fu
                     , random-source
                     , random-extras
                     , http-conduit
                     , machinecell-contrib
                     , hs-config
                     , wai-app-static
                     , wai
                     , warp
                     , http-types
                     , HTTP
                     , base64-bytestring
                     , open-browser
                     , array
                     , chunked-data
                     , http-client
                     , http-client-tls
                     , concurrent-extra
                     , optparse-applicative
                     , streaming
                     , time-lens
                     , lens
                     , time
                     , streaming-bytestring
                     , streaming-utils
  default-language:    Haskell2010

executable spotify
  hs-source-dirs:      app/
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  extensions:          OverloadedStrings
  build-depends:       spotify
                     , base
                     , classy-prelude
                     , machinecell-contrib
                     , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/limaner2002/MyMixer
