name:                spotify
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/MyMixer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
  exposed-modules:     Internal.Types
                     , Internal.Database
                     , Internal.Newtypes
                     , ITunes
                     , Spotify
                     , ScrapeITunes
  other-modules:       
  build-depends:       base
                     , classy-prelude
                     , aeson
                     , binary
                     , project-m36
                     , lens
                     , lens-aeson
                     , taggy-lens
                     , servant
                     , servant-client
                     , cryptonite
                     , jose
                     , http-client
                     , http-client-tls
                     , QuickCheck
  default-language:    Haskell2010

-- executable spotify
--   hs-source-dirs:      app/
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
--   extensions:          OverloadedStrings
--   build-depends:       spotify
--                      , base
--                      , classy-prelude
--                      , optparse-applicative
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/limaner2002/MyMixer
